# ledger-rs

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: ci.yml
ledger-api/: Cargo.toml
ledger-api/benches/: transaction_insert.rs
ledger-api/src/: error.rs  lib.rs  main.rs  observability.rs  state.rs  sweeper.rs
ledger-api/src/routes/: accounts.rs  health.rs  mod.rs  transactions.rs
ledger-api/tests/: happy_path.rs  idempotency.rs  properties.rs  stress.rs
ledger-api/tests/common/: mod.rs
ledger-core/: Cargo.toml
ledger-core/src/: account.rs  canonical.rs  error.rs  ids.rs  lib.rs  money.rs  posting.rs
ledger-db/: Cargo.toml
ledger-db/src/: accounts.rs  error.rs  idempotency.rs  lib.rs  retry.rs  transactions.rs
ledger-db/tests/: accounts.rs  idempotency.rs  transactions.rs
ledger-db/tests/common/: mod.rs
migrations/: 0001_init.sql  0002_postings.sql  0003_idempotency.sql  0004_invariant_triggers.sql
scripts/: smoke.sql  test.sh  verify_smoke.sh
