[package]
name = "ledger-api"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true
description = "HTTP service for the double-entry ledger."

[lib]
path = "src/lib.rs"

[[bin]]
name = "ledger-api"
path = "src/main.rs"

[dependencies]
ledger-core.workspace = true
ledger-db.workspace = true

tokio.workspace = true
tokio-util.workspace = true

axum.workspace = true
tower.workspace = true
tower-http.workspace = true
http.workspace = true

serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true

sqlx.workspace = true   # the pool type and migration runner live in sqlx

sha2.workspace = true
hex.workspace = true
base64 = "0.22"

# Metrics facade + Prometheus exporter for /metrics
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.17", default-features = false }

thiserror.workspace = true
anyhow.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
testcontainers.workspace = true
testcontainers-modules.workspace = true
reqwest.workspace = true
proptest.workspace = true
futures.workspace = true
criterion.workspace = true

[[bench]]
name = "transaction_insert"
harness = false
