[package]
name = "ledger-core"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true
description = "Pure types, validation, and canonical-JSON for the ledger service. No I/O."

[dependencies]
serde.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
sha2.workspace = true
hex.workspace = true

# Optional: when the `sqlx` feature is on, our enums derive sqlx::Type
# so they map directly to Postgres custom enums. ledger-db enables this;
# anyone else using ledger-core gets a sqlx-free crate by default.
sqlx = { workspace = true, optional = true }

[features]
default = []
sqlx = ["dep:sqlx"]

[dev-dependencies]
proptest.workspace = true
